# new-ai-test

./: README.md  in-depth-readme.md  pyproject.toml
ai/prompts/: ai-prompt-bc-test_v3.1.md
config/: chris-test-config.json
config/old/: chris-test-config.json
project_readme/: fetch_bc_indepth.md  fetch_bc_readme.md
schemas/: org-env-config-schema.json
schemas/old/: org-env-config-schema.json
src/: fetch_bc_date.py
src/old/: fetch_bc_data.py
