[project]
name = "txo-python-template"
version = "0.1.0"
description = "Tentixo's default project structure and helper files"
requires-python = ">=3.13"
dependencies = [
    "jsonschema==4.25.1",
    "openpyxl>=3.1.5",
    "pandas==2.3.2",
    "pandas-stubs==2.3.2.250926",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "tqdm>=4.66.0",
    "urllib3>=2.5.0",
    "xai-sdk>=1.2.0",
]
